chore (titleAndLocation.scss): correct spacing

--- a/src/scss/components/_titleAndLocation.scss
+++ b/src/scss/components/_titleAndLocation.scss
@@ -7,14 +7,16 @@
   font-style: normal;
   font-weight: 500;
   line-height: 142.6%;
+  margin-bottom: 5px;
 }
 
-.housingDescription {
+.housingLocation {
   color: #ff6060;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: 142.6%;
+  margin-bottom: 10px;
 }
 
 @media (min-width: 769px) {
@@ -22,7 +24,8 @@
     font-size: 36px;
   }
 
-  .housingDescription {
+  .housingLocation {
     font-size: 18px;
+    margin-bottom: 20px;
   }
 }
